--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
     <div class="wrapper">
         <div class="container">
-            
+            <div class="row">
+                <div class="col-lg-7">
+                    
+                </div>
+            </div>
         </div>
 
         <!-- Bootstrap, Swiper, JQ, Mask -->
