--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/style.css?v=1" rel="stylesheet">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
-    <title>Start Template</title>
+    <title>WEB</title>
 </head>
 
 <body>
@@ -16,10 +16,59 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
-                    
+                    <header class="d-flex align-items-center justify">
+                        <!-- Использование Bootstrap классов для навигационного меню -->
+                        <nav class="navbar navbar-expand-lg">
+                            <!-- Кнопка для открытия/закрытия меню на мобильных устройствах -->
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+
+                            <!-- Навигационное меню -->
+                            <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item"><a class="nav-link" href="#">Услуги</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#">О компании</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#">Поддержка</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#">Новосибирск</a></li>
+                                </ul>
+                            </div>
+                        </nav>
+                        <div class="up_balance">
+                            <a class="up_balance__link" href="#">Пополнить баланс</a>
+                        </div>
+                    </header>
+                </div>
+                <div class="col-lg-5">
+                    <div class="header_btn">
+
+                    </div>
                 </div>
             </div>
         </div>
+
+
+        <!-- Основной контент -->
+        <main>
+            <div class="container">
+
+            </div>
+        </main>
+
+        <!-- Подвал сайта -->
+        <footer>
+            <div class="container">
+                <p>© 2023 My WordPress Website. All rights reserved.</p>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#">Facebook</a></li>
+                    <li class="list-inline-item"><a href="#">Twitter</a></li>
+                    <li class="list-inline-item"><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+        </footer>
+
 
         <!-- Bootstrap, Swiper, JQ, Mask -->
         <script src="./js/bootstrap.bundle.min.js"></script>
