--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
-                    <header class="d-flex align-items-center justify">
+                <div class="col-12">
+                    <header class="d-flex align-items-center justify-content-between">
                         <!-- Использование Bootstrap классов для навигационного меню -->
                         <nav class="navbar navbar-expand-lg">
                             <!-- Кнопка для открытия/закрытия меню на мобильных устройствах -->
@@ -39,24 +39,71 @@
                         <div class="up_balance">
                             <a class="up_balance__link" href="#">Пополнить баланс</a>
                         </div>
+                        <div class="header_btnsocials">
+                            <a href="">+7 383 258-33-00</a>
+                            <a href="">Написать в WhatsApp</a>
+                        </div>
                     </header>
                 </div>
-                <div class="col-lg-5">
-                    <div class="header_btn">
 
-                    </div>
-                </div>
             </div>
         </div>
 
 
         <!-- Основной контент -->
-        <main>
+        <main class="mt-5 mb-5">
             <div class="container">
-
+                <div class="row">
+                    <div class="col-12">
+                        <div class="main_infocontainer">
+                            <p class="main_breadcrumb">Главная / Безопасность бизнеса / Обеспечение порядка в местах
+                                проведения массовых мероприятий</p>
+                            <h1 class="main_offer">Обеспечение порядка в местах проведения массовых мероприятий</h1>
+                            <a class="main_offerbtn" href="#!">Заказать услугу</a>
+                            <div class="main_imgcontainer">
+                                <img src="img/main_img.png" alt="Стадион">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
+        <!-- Тизеры -->
+        <aside class="mb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="tizers_container">
+                            <span class="tizers__title">
+                                Риски
+                            </span>
+                            <span class="tizers_info">
+                                В современный период времени проведение больших массовых мероприятий имеет особенно
+                                высокий риск опасности. Творческие встречи, концерты, праздники, спортивные
+                                соревнования, все это требует внимательного и тщательного контроля.
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="tizers_container">
+                            <span class="tizers__title">
+                                Охрана
+                            </span>
+                            <span class="tizers_info">
+                                В случае обнаружения какой-либо опасности, каждому участнику встречи должна быть оказана
+                                незамедлительная помощь со стороны охранных структур. Равным образом и для
+                                предотвращения внешних угроз различного характера организация охраны массовых
+                                мероприятий является обязательным условием.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </aside>
+        <!-- Наши клиенты - Слайдер -->
+        <aside>
 
+        </aside>
         <!-- Подвал сайта -->
         <footer>
             <div class="container">
